# test-tirgger-omni-bridge-ci

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.gramine  Makefile  README.md  bridge.manifest  bridge.manifest.template  docker-compose.yml  omni-bridge.manifest.template  rustfmt.toml
.githooks/: pre-commit
.github/workflows/: build.yml  release.yml
artifacts/: bridge_config.json
artifacts/ethereum/HEI-token/: .gitignore  README.md  package.json  pnpm-lock.yaml
artifacts/ethereum/HEI-token/contracts/erc20/: erc20.sol
artifacts/ethereum/HEI-token/contracts/heima/: HEI.sol
artifacts/ethereum/HEI-token/test/: smoke-tests.ts
bridge-cli/: Cargo.toml  README.md
bridge-cli/src/: main.rs
bridge-core/: Cargo.toml
bridge-core/src/: config.rs  fetcher.rs  key_store.rs  lib.rs  listener.rs  primitives.rs  relay.rs  sync_checkpoint_repository.rs
bridge-worker/: Cargo.toml
bridge-worker/src/: cli.rs  main.rs  shielding_key.rs
bridge-worker/src/keystore/: local.rs  mod.rs
bridge-worker/src/rpc/: error_code.rs  methods.rs  mod.rs  server.rs
docker/: chains.yml  deployers.yml  explorer.yml  omni-bridge.yml
ethereum/bridge-contracts/script/: Bridge.s.sol
ethereum/bridge-contracts/src/: Bridge.sol  Token.sol
ethereum/bridge-contracts/test/: Bridge.t.sol
ethereum/chainbridge-contracts/: README.md  foundry.toml  remappings.txt
ethereum/chainbridge-contracts/script/: all-contracts.s.sol  bridge.s.sol  deposit.s.sol  handler.s.sol  token.s.sol
ethereum/chainbridge-contracts/src/: Bridge.sol  ERC20Safe.sol  ERC721MinterBurnerPauser.sol  ERC721Safe.sol  Migrations.sol  TestContracts.sol  Token.sol
ethereum/chainbridge-contracts/src/handlers/: ERC20Handler.sol  ERC721Handler.sol  GenericHandler.sol  HandlerHelpers.sol
ethereum/chainbridge-contracts/src/interfaces/: IBridge.sol  IDepositExecute.sol
ethereum/chainbridge-contracts/src/utils/: SafeCast.sol
ethereum/cli/: Cargo.toml
ethereum/cli/artifacts/: HEI.json  LITToken.json
ethereum/cli/src/: lib.rs
ethereum/listener/: Cargo.toml
ethereum/listener/src/: fetcher.rs  lib.rs  listener.rs  primitives.rs  rpc_client.rs
ethereum/relayer/: Cargo.toml
ethereum/relayer/src/: key_store.rs  lib.rs
local/: config.json
local/keystore/: README.md
local/nginx/: 5xx.html
scripts/: test-e2e-bridge.sh  test-repeated-block-scanning.sh
substrate/artifacts/: heima.scale  metadata.scale  paseo-omni-bridge.scale  paseo.scale  rococo-bridge.scale
substrate/bridge-pallet/: Cargo.toml
substrate/bridge-pallet/src/: lib.rs
substrate/cli/: Cargo.toml
substrate/cli/src/: lib.rs
substrate/listener/: Cargo.toml
substrate/listener/src/: fetcher.rs  lib.rs  listener.rs  primitives.rs  rpc_client.rs
substrate/relayer/: Cargo.toml
substrate/relayer/src/: key_store.rs  lib.rs
