[workspace]
members = [
    "bridge-core",
    "bridge-cli",
    "bridge-worker",
    "ethereum/relayer",
    "ethereum/listener",
    "ethereum/cli",
    "substrate/cli",
    "substrate/relayer",
    "substrate/listener",
]

resolver = "2"

[workspace.package]
edition = "2021"

[workspace.dependencies]
log = "0.4.22"
sha2 = "0.10.8"
thiserror = "2.0"
tokio = { version = "1.40", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "signal",
    "sync",
] }
async-trait = "0.1.82"
env_logger = "0.11.5"
scale-encode = "0.7"
parity-scale-codec = { version = "3.6.12", features = ["derive"] }
alloy = "0.3.6"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
serde_with = { version = "3.11", features = ["hex"] }
hex = "0.4"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["serde"] }
subxt = "0.37"
subxt-core = "0.37"
subxt-signer = { version = "0.37.0", features = ["subxt"] }
sp-core = "34.0.0"
hex-literal = "0.4"
tempfile = "3.14.0"
jsonrpsee-core = { version = "0.24", features = ["client"] }
jsonrpsee-types = "0.24"
jsonrpsee = { version = "0.24", features = ["server"] }
once_cell = "1.20"
reqwest = "0.12"
mockall = "0.13.1"
futures = "0.3.31"

bridge-core = { path = "bridge-core" }
bridge-cli = { path = "bridge-cli" }
bridge-worker = { path = "bridge-worker" }
ethereum-cli = { path = "ethereum/cli" }
ethereum-listener = { path = "ethereum/listener" }
ethereum-relayer = { path = "ethereum/relayer" }
substrate-cli = { path = "substrate/cli" }
substrate-listener = { path = "substrate/listener" }
substrate-relayer = { path = "substrate/relayer" }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
