[package]
name = "bridge-cli"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
clap = { workspace = true, features = ["derive"] }
ethereum-cli = { path = "../ethereum/cli" }
substrate-cli = { path = "../substrate/cli" }