[package]
name = "bridge-cli"
version = "0.1.4"
edition.workspace = true

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
ethereum-cli = { workspace = true }
substrate-cli = { workspace = true }
tokio = { workspace = true }
bridge-core = { workspace = true }
serde_json = { workspace = true }