[package]
name = "bridge-cli"
version = "0.1.5"
edition.workspace = true

[dependencies]
bridge-core = { workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
ethereum-cli = { workspace = true }
serde_json = { workspace = true }
substrate-cli = { workspace = true }
tokio = { workspace = true }
