[package]
name = "bridge-core"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
ethereum-listener = { workspace = true }
ethereum-relayer = { workspace = true }
substrate-listener = { workspace = true }
substrate-relayer = { workspace = true }
