[package]
name = "bridge-worker"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {  workspace = true }
clap = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
serde_with = { workspace = true }
rsa = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
sp-core = { workspace = true }
sha2 = { workspace = true }
jsonrpsee = { workspace = true }
jsonrpsee-types = { workspace = true }

bridge-core = { workspace = true }
ethereum-listener = { workspace = true }
ethereum-relayer = { workspace = true }
substrate-listener = { workspace = true }
substrate-relayer = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
jsonrpsee-core = { workspace = true }
hex-literal = { workspace = true }