[package]
name = "bridge-worker"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { workspace = true }
env_logger = { workspace = true }
hex = { workspace = true }
jsonrpsee = { workspace = true }
jsonrpsee-types = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
sp-core = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

bridge-core = { workspace = true }
ethereum-listener = { workspace = true }
ethereum-relayer = { workspace = true }
substrate-listener = { workspace = true }
substrate-relayer = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
reqwest = { workspace = true }
once_cell = { workspace = true }
jsonrpsee-core = { workspace = true }
hex-literal = { workspace = true }
