[package]
name = "ethereum-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = {  workspace = true }
log = { workspace = true }
async-trait = { workspace = true }
parity-scale-codec = { workspace = true }
alloy = { workspace = true, features = ["rpc", "rpc-types", "dyn-abi", "contract"] }
serde = { version = "1.0.217", features = ["derive"] }

bridge-core = { workspace = true }

[dev-dependencies]
env_logger = {  workspace = true }
