[package]
name = "ethereum-relayer"
version = "0.1.0"
edition.workspace = true

[dependencies]
alloy = { workspace = true, features = ["contract", "signer-local"] }
async-trait = { workspace = true }
bridge-core = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
mockall = { workspace = true }
futures = { workspace = true }
