[package]
name = "substrate-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
bridge-core = { path = "../../bridge-core" }
async-trait = { workspace = true }
parity-scale-codec = { workspace = true, features = ["derive"] }
subxt = "0.37.0"
scale-encode = "0.7.1"
tokio = {  workspace = true, features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
env_logger = { workspace = true }
