[package]
name = "substrate-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
log = { workspace = true }
bridge-core = { workspace = true }
async-trait = { workspace = true }
parity-scale-codec = { workspace = true }
subxt = { workspace = true }
serde = { workspace = true }
scale-encode = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
