[package]
name = "substrate-relayer"
version = "0.1.0"
edition.workspace = true

[dependencies]
bridge-core = { path = "../../bridge-core" }
async-trait = { workspace = true }
subxt = "0.37.0"
subxt-signer = { version = "0.37.0", features = ["subxt"]}
log = { workspace = true }
serde = { workspace = true }