[package]
name = "substrate-relayer"
version = "0.1.0"
edition.workspace = true

[dependencies]
async-trait = { workspace = true }
bridge-core = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
subxt = { workspace = true }
subxt-signer = { workspace = true }
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
serde_json = { workspace = true }
tempfile = { workspace = true }
scale-encode = { workspace = true}